[package]
name = "download_m3mu"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.8.0"
colored = "2.1.0"
regex = "1.11.1"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
toml = "0.8.19"
